--- a/trunk/ruby/deep_test/simple_test/Rakefile
+++ b/trunk/ruby/deep_test/simple_test/Rakefile
@@ -1,6 +1,8 @@
 require "rubygems"
 require "deep_test/rake_tasks"
 require 'rake'
+$: << "tests"
+p $:
 
 DeepTest::TestTask.new "holas" do |t|
   t.pattern = "tests/*_test.rb"
